# nayan

./: .gitignore  README.md  app.py  pyproject.toml
Ultralytics/: settings.json
app/: __init__.py  api.py  camera_client.py  config.py  images.py  logging_config.py  main.py  prompts.py  run.py  services.py  tts.py  vision.py
app/api/: routes.py
app/buffer/: __init__.py  frame_buffer.py
app/camera/: __init__.py  client.py  worker.py
assets/prompts/: navigation.md  system_prompt.md  test1_tts_standalone.py
image-describer/: main.py  requirements.txt  test_groq.py  text_to_speech.py
notebooks/: prototype.ipynb
src/nayan/: __init__.py  cli.py  pipeline.py  types.py
src/nayan/perception/: __init__.py  base.py  walkable_common.py  walkable_onnx.py  walkable_torch.py
src/nayan/trajectory/: __init__.py  estimator.py  smoother.py
src/nayan/video/: __init__.py  io.py
src/nayan/visualization/: __init__.py  overlay.py
tests/: test_api.py  test_frame_buffer.py  test_run.py  test_trajectory.py  test_vision.py  test_worker.py
