[project]
name = "nayan"
version = "0.3.0"
description = "Assistive navigation service with camera capture, vision guidance, and TTS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "edge-tts>=6.1.0",
    "fastapi>=0.115.0",
    "groq>=0.13.0",
    "httpx>=0.28.0",
    "pillow>=10.0.0",
    "pydantic-settings>=2.6.0",
    "pydub>=0.25.1",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
nayan-run = "app.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
